<resources>
    <string name="app_name">NFC-WISP-Android-App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Personal Profile</string>
    <string name="measure_hist">History Measurement</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_measurement">Do Measurement</string>
    <string name="action_switch_user">Switch User</string>
    <string name="action_sign_up_item">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="gender">Gender</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="weight_hint">Weight (lb)</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sample">Sign in</string>
    <string name="empty_measurement_history">No Measurement</string>


    <string name="startupDefault">tap tag to do measurement</string>
    <string name="back">Back</string>
    <string name="save">Save</string>

</resources>
