<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nfc_wisp_android_app.nfc_wisp_android_app.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="8">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/first_name"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_weight="1"/>

                        <EditText
                            android:id="@+id/first_name_sign_up"
                            android:layout_weight="7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </LinearLayout>
                </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <EditText
                        android:id="@+id/last_name_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:hint="@string/last_name"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </LinearLayout>
            </android.support.design.widget.TextInputLayout>





            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="0.89"/>

                    <EditText
                        android:id="@+id/username_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="7.22"
                        android:hint="@string/user_name"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textLongMessage"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_password"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1.14"/>

                    <EditText
                        android:id="@+id/password_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1.75"/>

                    <EditText
                        android:id="@+id/age_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:hint="@string/age"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_weight="1.49"/>

                    <EditText
                        android:id="@+id/weight_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:hint="@string/weight_hint"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">
                    <TextView
                        android:layout_width="95dp"
                        android:layout_height="35dp"
                        android:text="@string/gender"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/gender_sign_up"
                        android:layout_weight="7"/>
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/back_button"
                android:text="@string/action_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
            <Button
                android:id="@+id/register_button"
                android:text="@string/action_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
